--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,23 @@
 version: "3.8"
 
 services:
+  gluetun:
+    image: qmcgaw/gluetun:latest
+    cap_add:
+      - NET_ADMIN
+    env_file:
+      - .env
+    environment:
+      - VPN_SERVICE_PROVIDER=nordvpn
+      - VPN_TYPE=openvpn
+      - OPENVPN_USER=${NORDVPN_USER}
+      - OPENVPN_PASSWORD=${NORDVPN_PASS}
+      - SERVER_COUNTRIES=${NORDVPN_SERVER_COUNTRIES}
+      - HTTPPROXY=on
+      - TZ=${TZ}
+    ports:
+      - "8888:8888"
+
   redis:
     image: redis:7-alpine
     ports:
@@ -9,13 +26,19 @@ services:
   lazy-torrentio:
     build: .
     depends_on:
+      - gluetun
       - redis
+    env_file:
+      - .env
     environment:
       - REDIS_URL=redis://redis:6379
       - EZTV_URL=https://eztv.re
       - YTS_URL=https://yts.lt
       - TGX_URL=https://torrentgalaxy.hair
       - PIRATEBAY_URL=https://thepiratebay.org
+      - HTTP_PROXY=http://gluetun:8888
+      - HTTPS_PROXY=http://gluetun:8888
+      - NO_PROXY=redis,localhost,127.0.0.1
     ports:
       - "19080:80"
     volumes:
