--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "redis": "^4.6.13",
-    "stremio-addon-sdk": "^1.6.10"
+    "stremio-addon-sdk": "^1.6.10",
+    "undici": "^6.19.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
