--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,10 +41,13 @@ services:
     env_file:
       - .env
     environment:
+      - REDIS_URL=redis://localhost:6379
       - EZTV_URL=https://eztv.re
       - YTS_URL=https://yts.lt
       - TGX_URL=https://torrentgalaxy.hair
       - PIRATEBAY_URL=https://thepiratebay.org
       - X1337X_URL=https://1337x.to
+      - FLARESOLVERR_SESSIONS=10
+      - FLARESOLVERR_URL=http://localhost:8191
     volumes:
       - ./data/imdb:/app/data/imdb
