--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
         condition: service_started
       flaresolverr:
         condition: service_started
+    command: ["sh", "-c", "sleep 5 && node dist/index.js"]
     network_mode: "service:gluetun"
     env_file:
       - .env
