--- a/docker-compose.gluetun.yml
+++ b/docker-compose.gluetun.yml
@@ -53,6 +53,7 @@ services:
       - TGX_URL=https://torrentgalaxy.hair
       - APIBAY_URL=https://apibay.org
       - X1337X_URL=https://1337x.to
+      - KAT_URL=https://katcr.to,https://kickasstorrents.to
       - FLARESOLVERR_SESSIONS=10
       - FLARESOLVERR_URL=http://localhost:8191
     volumes:
