--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -19,6 +19,7 @@ services:
       - TGX_URL=https://torrentgalaxy.hair
       - APIBAY_URL=https://apibay.org
       - X1337X_URL=https://1337x.to
+      - KAT_URL=https://katcr.to,https://kickasstorrents.to
       - FLARESOLVERR_SESSIONS=10
       - FLARESOLVERR_URL=http://flaresolverr:8191
     command: >
